--- a/test-map.html
+++ b/test-map.html
@@ -11,7 +11,7 @@
 <div id="map"></div>
 
 <!-- 꼭 https + autoload=false 로! -->
-<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=여기_JavaScript_키&libraries=services&autoload=false"
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6096c5ef0866cfa555f1040e3f21bc62&libraries=services&autoload=false"
         onerror="document.getElementById('status').textContent='❌ SDK 스크립트 로드 실패'">
 </script>
 <script>
