--- a/matjip.html
+++ b/matjip.html
@@ -100,6 +100,7 @@
         <a href="index.html">Home</a>
         <a href="stock.html">Stock Market</a>
         <a href="matjip.html">맛집</a>
+        <a href="u1.html">U1</a>
         <a href="index.html#contact" class="btn primary">문의하기</a>
       </div>
     </nav>
