--- a/u1.html
+++ b/u1.html
@@ -123,8 +123,8 @@
     <p>접근 권한이 필요합니다. 비밀번호를 입력해 주세요.</p>
     <input id="lock-pass" type="password" inputmode="numeric" placeholder="비밀번호 (4자리)" maxlength="16" autocomplete="current-password" />
     <div id="lock-actions">
-      <button id="lock-submit" class="btn primary">입장</button>
-      <button id="lock-clear" class="btn">지우기</button>
+      <button id="lock-submit" class="btn primary" type="button">입장</button>
+      <button id="lock-clear" class="btn" type="button">지우기</button>
     </div>
     <div id="lock-error"></div>
   </div>
