--- a/scotest.html
+++ b/scotest.html
@@ -52,6 +52,21 @@
   </style>
 </head>
 <body>
+  
+ <header>
+    <div class="container">
+      <nav>
+        <div class="brand">내 홈페이지<span class="logo-dot"></span></div>
+        <div class="navlinks">
+          <a href="/">Home</a>
+          <a href="/stock.html">Stock Market</a>
+          <a href="/matjip.html">맛집</a>
+          <a href="/scotest.html">SC&O MBTI</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+  
   <div class="wrap">
     <header>
       <span class="badge">EY SC&O · 팀 밈 테스트</span>
