--- a/dentalmbti.html
+++ b/dentalmbti.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>⚡ 치위생사 맞춤형 10유형 MBTI</title>
-  <meta name="description" content="치과 치위생사/상담 실무 상황 기반 10유형 테스트 — 진상 환자, 퇴근 5분 전, 야간 근무 등 리얼 시나리오로 알아보는 나의 유형!" />
+  <title>⚡ 우리 치과 캐릭터 유형 MBTI</title>
+  <meta name="description" content="치과 실무 상황 기반 유형 테스트 — 진상 환자, 퇴근 전, 야간 등 리얼 시나리오로 알아보는 나의 유형!" />
   <style>
     :root{
       --bg:#0b1020; --panel:#11162a; --ink:#e8ebf4; --muted:#9aa3b2; --brand:#7c9dff; --accent:#68e4c6; --line:#1e2642; --good:#86efac; --warn:#fbbf24;
@@ -126,8 +126,8 @@
     </section>
 
     <footer>
-      <div>🔗 공유 링크는 현재 페이지 주소에 결과 코드(<code>?r=타입</code>)를 덧붙여 생성됩니다.</div>
-      <div>© 2025 — 대호님 깃허브 배포용 단독 페이지. 수정/활용 자유.</div>
+      <div>🔗 결과 링크 복사 후 공유 가능.</div>
+      <div>© 2025 — 배포.</div>
     </footer>
   </div>
 
