--- a/dentalmbti.html
+++ b/dentalmbti.html
@@ -75,11 +75,10 @@
       <div class="title">
         <div style="font-size:1.4rem">🦷</div>
         <div>
-          <h1>치위생사 맞춤형 10유형 MBTI</h1>
-          <div class="muted small">진상 환자 / 퇴근 5분 전 / 야간 근무 / 점심 메뉴… 리얼 상황 테스트</div>
+          <h1>치과 캐릭터 유형 MBTI</h1>
+          <div class="muted small">진상 환자 / 퇴근 전 / 야간 / 점심 메뉴… 리얼 상황 테스트</div>
         </div>
       </div>
-      <div class="badge">단독 페이지 • 오프라인 동작</div>
     </header>
 
     <!-- QUIZ PANEL -->
